[package]
name = "toolchain"
version = "0.0.1"
edition = "2018"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
libc = "0.2.172"
procfs = "0.17.0"

sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
[dependencies.syn]
version = "1.0"
features = ["parsing", "proc-macro"]
[profile.dev]
incremental = true
